--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "babel-preset-stage-0": "^6.5.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "lei-ns": "^0.3.1",
     "mongoose": "^4.5.4",
-    "project-core": "^0.1.4"
+    "multiparty": "^4.1.2",
+    "project-core": "^0.1.4",
+    "serve-static": "^1.11.1"
   }
 }
