--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha",
     "watch": "npm run clean && babel src -d target --watch",
     "compile": "npm run clean && babel src -d target",
-    "clean": "rm -Rf target"
+    "clean": "rm -Rf target",
+    "dev": "export NODE_ENV=dev && DEBUG='my:*' && node target/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "debug": "^2.2.0",
     "express": "^4.14.0",
     "lei-ns": "^0.3.1",
     "mongoose": "^4.5.4",
