--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^4.5.4",
     "multiparty": "^4.1.2",
     "project-core": "^0.1.4",
-    "serve-static": "^1.11.1"
+    "serve-static": "^1.11.1",
+    "validator": "^5.4.0"
   }
 }
